# backend/src/api/index.ts
@@ -1,9 +1,4 @@
 export * from "./auth";
 export * from "./profile";
-export * from "./monitors";
-export * from "./agents";
-export * from "./status";
-export * from "./notifications";
 export * from "./dashboard";
 export * from "./ws";
-export * from "./security";
